--- a/classes/A0.cls
+++ b/classes/A0.cls
@@ -3,7 +3,7 @@
 //newCommentforFun
 public Class A0
 {
-public Account CreateRecord(String name)  //method to create Account
+public Account CreateRecord(String name)  //method to create Account1
 {
 //Add comment for Account A1
 Account a121 = new Account();
